--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="username">نام کاربری</string>
+    <string name="password">رمزعبور(حداقل پنج کارکتر)</string>
+    <string name="confirmPassword">اطمینان برای رمز عبور</string>
+    <string name="loginBotrom">ورود</string>
+
 </resources>
